password changed view fixed

--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -9,6 +9,6 @@
 <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
     {% csrf_token %}
     {{ form|crispy }}
-    <button class="btn btn-success" type="submit" value="Password is changed.">Change Password</button>
+    <button class="btn btn-success" type="submit" name="action" value="Password is changed.">Change Password</button>
 </form>
 {% endblock %}
