--- a/templates/guides/post_list.html
+++ b/templates/guides/post_list.html
@@ -5,7 +5,7 @@
 {% block content %}
     {% for post in object_list %}
         <div>
-            <h2><a href="">{{ post.title }}</a></h2>
+            <h2><a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a></h2>
         </div>
     {% endfor %}
 {% endblock content %}
