--- a/templates/_base.html
+++ b/templates/_base.html
@@ -19,7 +19,7 @@
             <a href="{% url 'home' %}" class="navbar-brand my-0 mr-md-auto font-weight-normal">Nihongo Manabou</a>
             <nav class="my-2 my-md-0 mr-md-3">
                 {% if user.is_authenticated %}
-                <a class="p-2 text-dark" href="{% url 'post_list' %}">Guide Me</a>
+                <a class="p-2 text-dark" href="{% url 'guide_list' %}">Guide Me</a>
                 <a class="p-2 text-dark" href="{% url 'account_logout' %}">Log Out</a>
                 {% else %}
                 <a class="p-2 text-dark" href="{% url 'about' %}">About</a>
