--- a/templates/guides/guide_edit.html
+++ b/templates/guides/guide_edit.html
@@ -1,10 +1,10 @@
 {% extends '_base.html' %}
 {% load crispy_forms_tags %}
 
-{% block title %}Guide Me | Edit Post{% endblock title %}
+{% block title %}Edit Guide{% endblock title %}
 
 {% block content %}
-<h2>Edit Post</h2>
+<h2>Edit Guide</h2>
 <form action="" method="POST">
     {% csrf_token %}
     {{ form|crispy }}
