--- a/templates/guides/guide_detail.html
+++ b/templates/guides/guide_detail.html
@@ -4,9 +4,9 @@
 
 {% block content %}
 <div class="guide-entry">
-    <h2>{{ object.title }}</h2>
-    <p>by {{ object.author }} | {{ object.date }}</p>
-    <p>{{ object.body }}</p>
+    <h2>{{ guide.title }}</h2>
+    <p>by {{ guide.author }} | {{ guide.date }}</p>
+    <p>{{ guide.body|linebreaks }}</p>
 </div>
 <p><a href="{% url 'guide_edit' guide.pk %}">Edit</a> | <a href="{% url 'guide_delete' guide.pk %}">Delete</a></p>
 <p>Back to <a href="{% url 'guide_list' %}">All Guides</a>.</p>
