--- a/templates/videos/video_list.html
+++ b/templates/videos/video_list.html
@@ -12,8 +12,25 @@
             {% video video.video as my_video %}
                 <td><a href="{{ video.get_absolute_url }}">{{ video.title }}</a></td>
                 <td><img src="{{ my_video.thumbnail }}" width="60" height="45" class="img-rounded"></td>
+                {% if user.is_superuser %}
+                <td>
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                          <button class="dropdown-item" type="button">Edit</button>
+                          <button class="dropdown-item" type="button"><a href="{% url 'video_delete' video.pk %}">Delete</a></button>
+                        </div>
+                      </div>
+                </td>
+                {% endif %}
             {% endvideo %}       
         </tr>
         {% endfor %}
     </table>
+
+    {% if user.is_superuser %}
+    <div>
+        <a class="btn btn-info btn-md" href="{% url 'video_new' %}">NEW</a>
+    </div>
+    {% endif %}
 {% endblock content %}
