--- a/templates/_base.html
+++ b/templates/_base.html
@@ -14,21 +14,41 @@
 <body>
     <header>
         <!-- Fixed navbar -->
-        <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <img class="logo" src="{% static 'images/nihongo.png' %}">
             <a href="{% url 'home' %}" class="navbar-brand my-0 mr-md-auto font-weight-normal">Nihongo Manabou</a>
-            <nav class="my-2 my-md-0 mr-md-3">
-                {% if user.is_authenticated %}
-                <a class="p-2 text-dark" href="{% url 'guide_list' %}">Guide Me</a>
-                <a class="p-2 text-dark" href="{% url 'video_list' %}">Inspire Me</a>
-                <a class="p-2 text-dark" href="{% url 'account_logout' %}">Log Out</a>
-                {% else %}
-                <a class="p-2 text-dark" href="{% url 'about' %}">About</a>
-                <a class="p-2 text-dark" href="{% url 'account_login' %}">Log In</a>
-                <a class="btn btn-outline-primary" href="{% url 'account_signup' %}">Sign Up</a>
-                {% endif %}
-            </nav>
-        </div>
+
+            <div class="navbar">
+                <ul class="nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'guide_list' %}">Guide Me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'video_list' %}">Inspire Me</a>
+                    </li>
+                </ul>
+            </div>
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarToggler">
+                <ul class="d-flex align-items-end navbar-nav ml-lg-auto">
+                    {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'account_logout' %}">Log Out</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'account_login' %}">Log In</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a>
+                    </li>
+                    {% endif %}  
+                </ul>
+            </div>
+        </nav>
     </header>
     <div class="container">
         {% block content %}
