--- a/templates/_base.html
+++ b/templates/_base.html
@@ -26,6 +26,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'video_list' %}">Inspire Me</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'forum_list' %}">Forums</a>
+                    </li>
                 </ul>
             </div>
 
